feat(backend): setup MongoDB connection and environment configuration
- Add .env to .gitignore for environment variable security
- Create backend/.env.example with PORT and MONGO_URI placeholders
- Implement database connection logic in config/db.js using Mongoose
- Define Note model schema with title and content fields and timestamps
- Install dotenv and mongoose dependencies
- Load environment variables in server.js using dotenv.config()
- Set app port from environment variable with fallback to 5001
- Connect to MongoDB before starting Express server and log connection info

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,9 @@
 {
   "author": "Trần Anh Tuấn",
   "dependencies": {
-    "express": "^5.2.1"
+    "dotenv": "^17.2.4",
+    "express": "^5.2.1",
+    "mongoose": "^9.2.0"
   },
   "description": "",
   "devDependencies": {
